# Curriculum-Vitae

./: .gitignore  CNAME  Cargo.toml  Makefile.toml  README.md  build.rs  curriculum-vitae-902ba84b8fac4c00.js  curriculum-vitae-902ba84b8fac4c00_bg.wasm  index-8bf2a31fe8c2ec1a.js  index-8bf2a31fe8c2ec1a_bg.wasm  index-919d16a0eb6b3c90.js  index-919d16a0eb6b3c90_bg.wasm  index-9d211ed7fe446f50.js  index-9d211ed7fe446f50_bg.wasm  index-fcfb75d426bd211c.js  index-fcfb75d426bd211c_bg.wasm  index.html  main-fc925dc5e68d8be8.css  main.css  package.json  wasm.js  wasm_bg.wasm
.github/workflows/: build_and_deploy.yml  check_build.yml
scss/: _experience.scss  _languages.scss  _osc.scss  _person-details.scss  _projects.scss  _side_projects.scss  _skills.scss  _title.scss  main.scss
src/: data.rs  lib.rs  main.rs
static/: index.html
style/: main.css
