[package]
authors = ["Midas Lambrichts <midaslamb@gmail.com>"]
description = "The CV of Midas Lambrichts"
edition = "2018"
name = "curriculum-vitae"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
wasm-bindgen = "0.2.67"
yew = {version = "0.18", default-features = false, features = ["web_sys"]}

[build-dependencies]
grass = "0.10"
